Task 04 with test suite and environment

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@wdio/spec-reporter": "^8.24.12"
   },
   "scripts": {
-    "wdio": "wdio run ./wdio.conf.js"
-  }
+    "wdio": "wdio run ./wdio.conf.js",
+    "login": "npx wdio run ./wdio.conf.js --suite login"
+  } 
 }
