--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "@wdio/cli": "^8.16.22",
     "@wdio/devtools-service": "^8.16.22",
     "@wdio/junit-reporter": "^8.16.22",
-    "@wdio/local-runner": "^8.16.22",
+    "@wdio/local-runner": "^8.27.2",
     "@wdio/mocha-framework": "^8.16.22",
     "@wdio/spec-reporter": "^8.16.22",
     "allure-commandline": "^2.25.0",
-    "wdio-intercept-service": "^4.4.0"
+    "wdio-intercept-service": "^4.4.0",
+    "wdio-video-reporter": "^5.1.0"
   },
   "scripts": {
     "wdio": "wdio run ./wdio.conf.js",
